[tool.poetry]
name = "map_le"
version = "0.1.0"
description = ""
authors = ["Isabelle Bouchard <isabelle.bouchard77@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.1"
geopandas = "^0.12.1"
rasterio = "^1.3.3"
matplotlib = "^3.6.1"
jupyter = "^1.0.0"
Rtree = "^1.0.1"
pygeos = "^0.13"
mapclassify = "^2.4.3"
folium = "^0.13.0"
rasterstats = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
